# colan

./: LICENSE  cabal.project.freeze  colon.cabal  readme.md
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: colon-0.1.0.0-inplace.conf  package.cache
src/: Commands.hs  Interpreter.hs  Parser.hs  Types.hs
test/: Main.hs  TestEmitValid.hs  TestPrintTop.hs  TestPushToStack.hs  TestRepl.hs  TestStackUnderflow.hs
