cabal-version:      3.0
name:               colon
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rafael
maintainer:         msmk.swimmer@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Commands,
        Interpreter,
        Types,
        Parser
    build-depends:    
        base ^>=4.17.2.1,
        containers >= 0.6.0 && < 0.7,
        mtl >= 2.2.2,
        transformers >= 0.5.6.2
    hs-source-dirs:   src
    default-language: Haskell2010

executable colon
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        containers >= 0.6.0 && < 0.7,
        mtl >= 2.2.2,
        transformers >= 0.5.6.2,
        colon
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite colon-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        containers >= 0.6.0 && < 0.7,
        mtl >= 2.2.2,
        transformers >= 0.5.6.2,
        colon
